    http://ws.nbcr.net/opal2/...
  * Compressed APBS OpenDX output files in zip format, so that users can 
    download zip files from the web server.
  * Removed "EXPERIMENTAL" from APBS web solver interface and Jmol 
    visualization interface.
  * Updated all APBS related urls from http://apbs.sourceforge.net/... to
    http:/apbs.wustl.edu/...

 - BUG FIXES
  * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
    smashing problem in simple test on Ubuntu Linux with recent gcc versions.
  * Verbosity outputs should be stdouts, not stderrs in web server interface. 
    Corrected this in src/routines.py.
  * Fixed a bug in psize.py: for a pqr file with no ATOM entries but only 
    HETATM entries in it, inputgen.py should still create an APBS input file
    with reasonable grid lengths. 
  * Added special handling for special mol2 formats (unwanted white spaces
    or blank lines in ATOM or BOND records).
  * Added template file to doc directory, which fixed a broken link in 
    programmer guide.

#############################################################################
BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09
#############################################################################
 - NEW FEATURES
  * Updated html/master-index.html, deleted html/index.php.
  * Updated pydoc by running genpydoc.sh.
  * Added a whitespace option by by putting whitespaces between atom name
    and residue name, between x and y, and between y and z.
  * Added radius for Chlorine in ligff.py.
  * Added PEOEPB forcefield, data provided by Paul Czodrowski.
  * Updated inputgen.py to write out the electrostatic potential for APBS
    input file. 
  * Updated CHARMM.DAT with two sets of phosphoserine parameters.
  * Allowed amino acid chains with only one residue, using --assign-only 
    option.
  * Updated server.py.in so that the ligand option is also recorded in 
    usage.txt. 