@@ -170,7 +170,9 @@ Available options:
 <input type="CHECKBOX" name="INPUT" CHECKED> Create an <a href="http://apbs.wustl.edu">APBS</a> input file <span style="font-size:60%">(this also enables the option to run APBS and visualize your results through the web interface, if it has been installed)</span><BR>
 <input type="CHECKBOX" name="CHAIN"> Add/keep chain IDs in the PQR file<BR>
 <input type="CHECKBOX" name="WHITESPACE"> Insert whitespaces between atom name and residue name, between x and y, and between y and z<BR>
-<input type="CHECKBOX" name="TYPEMAP"> Create Typemap output
+<input type="CHECKBOX" name="TYPEMAP"> Create Typemap output<BR>
+<input type="CHECKBOX" name="NEUTRALN"> Make the protein's N-terminus neutral (requires PARSE forcefield)<BR>
+<input type="CHECKBOX" name="NEUTRALC"> Make the protein's C-terminus neutral (requires PARSE forcefield)
 </blockquote>
 
 <input type="submit" value="Submit"><P>
