@@ -23,6 +23,8 @@ BETA PUBLIC RELEASE VERSION 1.4.1       6-26-09
     visualization interface.
   * Updated all APBS related urls from http://apbs.sourceforge.net/... to
     http:/apbs.wustl.edu/...
+  * Added two new options: --neutraln and --neutralc, so that users can 
+    manually make the N-termini or C-termini of their proteins neutral    
 
  - BUG FIXES
   * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
